crates/ferrum-interfaces/tests/ui/vnext/fail/active_sequence_completion_receipt_cannot_be_constructed.stderr
error[E0451]: fields `plan`, `sequence_authority`, `run_id`, `request_id`, `activation_epoch` and `runtime_implementation_fingerprint` of struct `ferrum_interfaces::vnext::ActiveSequenceCompletionReceipt` are private
  --> tests/ui/vnext/fail/active_sequence_completion_receipt_cannot_be_constructed.rs:10:9
   |
 9 |     let _ = ActiveSequenceCompletionReceipt {
   |             ------------------------------- in this type
10 |         plan,
   |         ^^^^ private field
11 |         sequence_authority,
   |         ^^^^^^^^^^^^^^^^^^ private field
12 |         run_id,
   |         ^^^^^^ private field
13 |         request_id,
   |         ^^^^^^^^^^ private field
14 |         activation_epoch: 1,
   |         ^^^^^^^^^^^^^^^^ private field
15 |         runtime_implementation_fingerprint: "0".repeat(64),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private field
